# timur-treesitter

./: README.md  grammar.js  tree-sitter.json
lua/nvim-treesitter-timur/: init.lua
lua/timur-treesitter/: init.lua
parser/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py
parser/bindings/c/: tree-sitter-timur.pc.in
parser/bindings/c/tree_sitter/: tree-sitter-timur.h
parser/bindings/go/: binding.go  binding_test.go
parser/bindings/node/: binding.cc  index.js
parser/bindings/python/tests/: test_binding.py
parser/bindings/python/tree_sitter_timur/: __init__.py  binding.c
parser/bindings/rust/: build.rs  lib.rs
parser/bindings/swift/TreeSitterTimurTests/: TreeSitterTimurTests.swift
parser/src/: grammar.json
queries/timur/: highlights.scm
src/: grammar.json  node-types.json  parser.c
